feat/module06 Задача "Отправка менеджерских сообщений"
